--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 	<canvas id="canvas" style="border: 1px solid #eee; display: block; margin:50px auto;">您的浏览器不支持canvas</canvas>
-	<input type="range" id="range" min="0.5" max="3.0" step="0.01" value="1" style="display: block; width: 600px;margin: 20px auto;">
+	<input type="range" id="range" min="1" max="3.0" step="0.01" value="1" style="display: block; width: 600px;margin: 20px auto;">
 	<div id="mask"><span>图片加载中, 请稍候...</span></div>
 	<script>
 		var canvas = document.getElementById('canvas');
@@ -45,6 +45,8 @@
 		var ch = 531;//1594
 		var range = document.getElementById('range');
 		var scale = range.value;
+		var watermarkCanvas = document.createElement('canvas');
+		var watermarkContext = watermarkCanvas.getContext('2d');
 		window.onload = function(){
 			canvas.width = cw;
 			canvas.height = ch;
@@ -58,6 +60,15 @@
 					drawImageByScale(scale);
 				}
 			}
+			//离屏canvas绘制水印
+			
+			watermarkCanvas.width = 620;
+			watermarkCanvas.height = 80;
+			watermarkContext.font = '40px Arial';
+			watermarkContext.textBaseline = 'middle';
+			watermarkContext.fillStyle = 'rgba(11, 215, 228, 0.8)';
+			watermarkContext.fillText('== github.com/yametehmeepo ==', 0 , 40)
+
 		}
 		function drawImageByScale(scale){
 			var imgW = cw * scale;
@@ -66,6 +77,7 @@
 			var dy = ch/2 - imgH/2;
 			context.clearRect(0, 0, canvas.width, canvas.height);
 			context.drawImage(image, dx, dy, imgW, imgH);
+			context.drawImage(watermarkCanvas, canvas.width - watermarkCanvas.width, canvas.height - watermarkCanvas.height);
 		}
 	</script>
 </body>
